# penn-clubs

./: .coveragerc  .env  .eslintrc  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierrc  Pipfile  README.md  codecov.yml  colors.js  docker-compose.test.yaml  features.txt  manage.py  next.config.js  package-lock.json  package.json  penn-clubs.code-workspace  renderPage.js  routes.js  setup.cfg  utils.js
backend/: .dockerignore  .swp  Dockerfile  Dockerfile.staging  Pipfile  Procfile  README.md  app.json  docker-compose.yaml  fly.toml  manage.py  pyproject.toml  setup.cfg
backend/clubs/: admin.py  apps.py  backends.py  consumers.py  essential_features.md  filters.py  middleware.py  mixins.py  models.py  permissions.py  routing.py  serializers.py  sitemap.py  urls.py  utils.py  views.py
backend/clubs/migrations/: 0001_initial.py  0002_auto_20190926_1641.py  0003_auto_20191025_2102.py  0003_auto_20191025_2120.py  0004_merge_20191025_2143.py  0005_auto_20191025_2218.py  0006_profile.py  0007_auto_20191103_1843.py  0008_auto_20191111_1835.py  0008_subscribe.py  0009_merge_20191206_2311.py  0010_note_notetag.py  0011_auto_20200103_1615.py  0012_testimonial.py  0013_auto_20200112_2104.py  0014_club_youtube.py  0014_event_type.py  0015_auto_20200119_1422.py  0015_merge_20200114_2151.py  0016_auto_20200114_2323.py  0016_auto_20200128_2024.py  0017_joinrequest.py  0017_report.py  0018_auto_20200207_1737.py  0018_auto_20200219_0903.py  0019_auto_20200223_1218.py  0019_merge_20200228_1615.py  0020_auto_20200228_1651.py  0021_auto_20200307_1913.py  0022_auto_20200308_1116.py  0023_questionanswer.py  0024_auto_20200628_1445.py  0025_auto_20200628_1510.py  0026_membershiprequest_withdrew.py  0027_club_fair.py  0028_auto_20200814_1909.py  0029_club_approved_comment.py  0030_auto_20200818_1835.py  0031_auto_20200818_1945.py  0031_historicalclub.py  (+229 more)
backend/pennclubs/: analytics.py  asgi.py  doc_settings.py  routing.py  urls.py  wsgi.py
backend/pennclubs/settings/: base.py  ci.py  development.py  production.py  staging.py
backend/redis/: fly.toml
backend/scripts/: asgi-run  convert_fixtures.py  django-run  wsgi-run
backend/templates/: preview.html  redoc.html  splash.html
backend/templates/admin/: base_site.html
backend/templates/emails/: application_deadline_reminder.html  application_extension.html  approval_queue_reminder.html  approval_status.html  base.html  base.txt  blast.html  club_deletion.html  confirmation.html  designate_resource_admin.html  fair.html  fair_feedback_general.html  fair_feedback_officers.html  fair_info.html  fair_post_virtual.html  fair_reminder.html  invite.html  membership_request.html  osa_email_communication.html  osa_queue_reminder.html  owner.html  owner.txt  ownership_request.html  ownership_request_accepted.html  ownership_request_denied.html  ownershiprequest.html  postfair.html  public_visibility.html  question.html  remind.html  remind.txt  reminder-email.html  renew.html  renewal_reminder.html  request.html  revised_fair_date.html  ticket_confirmation.html  ticket_refund.html  ticket_transfer.html  update_officers.html  (+5 more)
backend/templates/fyh_emails/: admin_outreach.html  approval_queue_reminder.html  approval_status.html  base.html  communication_to_partners.html  confirmation.html  designate_resource_admin.html  faq_demo.html  grad_resource_contact.html  ics_calendar_ingestation.html  intro.html  intro_remind.html  invite.html  (+9 more)
(+871 files in other folders)
