[project]
name = "penn-clubs"
version = "0.0.1"
requires-python = "==3.11.11"
dependencies = [
    "dj-database-url==2.1.0",
    "djangorestframework==3.15.2",
    "sentry-sdk==1.45.0",
    "django==5.0.4",
    "django-labs-accounts==0.9.5",
    "drf-nested-routers==0.93.5",
    "bs4==0.0.2",
    "bleach==4.1.0",
    "django-cors-headers==4.3.1",
    "uritemplate==4.1.1",
    "pyyaml==6.0.1",
    "django-storages==1.14.2",
    "pillow==10.3.0",
    "boto3==1.34.84",
    "django-phonenumber-field==7.3.0",
    "phonenumbers==8.13.34",
    "qrcode==7.4.2",
    "python-dateutil==2.9.0.post0",
    "psycopg2-binary==2.9.9",
    "django-simple-history==3.5.0",
    "channels[daphne]==4.1.0",
    "django-runtime-options==0.1.3",
    "social-auth-app-django==5.4.0",
    "django-redis==5.4.0",
    "channels-redis==4.2.0",
    "uwsgi==2.0.24",
    "uvloop==0.19.0",
    "uvicorn[standard]==0.29.0",
    "gunicorn==21.2.0",
    "httptools==0.6.1",
    "ics==0.7.2",
    "urlextract==1.9.0",
    "jsonref==1.1.0",
    "unittest-xml-reporting==3.2.0",
    "tblib==3.0.0",
    "pre-commit==3.7.0",
    "django-clone==5.3.3",
    "click==8.0.4",
    "jinja2==3.1.3",
    "pandas==2.2.2",
    "drf-excel==2.4.1",
    "numpy==1.26.4",
    "inflection==0.5.1",
    "cybersource-rest-client-python==0.0.53",
    "pyjwt==2.8.0",
    "freezegun==1.4.0",
]

[dependency-groups]
dev = [
    "setuptools==75.8.0",
    "wheel==0.45.1",
    "unittest-xml-reporting==3.2.0",
    "django-debug-toolbar==4.3.0",
    "django-extensions==3.2.3",
    "ruff==0.3.7",
    "coverage==7.4.4",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

